# bgs_algorithms_tests

ASBL/: CMakeLists.txt  README.md
ASBL/lib/package_bgs/: LBP_MRF.h
ASBL/src/: AdaptiveSelectiveBackgroundLearning.cpp  main.cpp
